--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,5 +1,5 @@
 .layout{
-    min-width: 96.24vw;
+    min-width: 96.5vw;
     /* min-height: 80vh; */
     /* background-color: red; */
     /* margin: 1.5rem 5.8rem; */
